Se eliminan comentarios.

--- a/notebooks/Statistical_Data_Analysis.ipynb
+++ b/notebooks/Statistical_Data_Analysis.ipynb
@@ -2185,7 +2185,7 @@
     }
    ],
    "source": [
-    "# Imprime las condiciones de la tarifa y asegúrate de que te quedan claras\n",
+    "# Imprime las condiciones de la tarifa\n",
     "df_plans.head()\n",
     "\n",
     "# Las tarifas se cobran por mes. \n",
@@ -2750,28 +2750,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Muy bien con todo, aunque creo que hubiese sido mejor haber convertido los mb a gb en la info de planes y datos usados por los usuarios y además en este último haber hecho la conversión a los gb que se cobrarán\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Respuesta estudiante.</b> <a class=\"tocSkip\"></a>\n",
-    "    \n",
-    "Se actualizo la columna de mb a gb.\n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
@@ -2995,28 +2973,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>Comentario de Reviewer</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Ok, esto funcionó pero no es del todo correcto. Dado que hiciste el merge de usuarios y minutos mediante user id y mes de ingreso y mes de uso de minutos, muchas filas te quedaron con el plan en nulo, con el forward fill se rellenaron. Sin embargo, no era necesario hacerlo así, bastaba con hacer el merge solo por id de usuario.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Respuesta estudiante.</b> <a class=\"tocSkip\"></a>\n",
-    "    \n",
-    "Se corrigio el merge. Las filas con el plan nulo se eliminaron y no hubo necesidad de usar el forward fill. \n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -3107,39 +3063,6 @@
     "    total_price = total_price_calls + total_price_messages + total_price_internet + plan_price\n",
     "\n",
     "    return total_price"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Comentario de Reviewer</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "La conversión a gb no es correcta, recuerda que 1 GB = 1024mb\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Respuesta estudiante.</b> <a class=\"tocSkip\"></a>\n",
-    "    \n",
-    "Se realizo el cambio de mb a gb, con el valor de 1024. \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Comentario de Reviewer v2</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Ok, corregido esto, pero el problema está en que gb_used_rounded tiene valores incorrectos. No hay que aplicar la función techo a cada uso de internet sino que después de sumar el consumo del mes, recién ahí se aplica la función techo.\n",
-    "</div>"
    ]
   },
   {
@@ -3267,17 +3190,6 @@
     "\n",
     "# Verificar el dataframe\n",
     "df_users_plan_per_month.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer v3</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Excelente, ahora todo está correcto\n",
-    "</div>"
    ]
   },
   {
@@ -3420,17 +3332,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Muy bien, correcto\n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -3466,40 +3367,6 @@
     "plt.legend(['surf','ultimate'])\n",
     "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Comentario de Reviewer</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "En esta parte se requiere observar el uso de cada usuario por mes en forma de histograma. Tan solo debes aplicar la función de histograma sobre la columna \"call_minutes\" de df_users_plan_per_month filtrando por plan. Idealmente ambos planes deberían aparecer en un mismo gráfico pero no \"stacked\" (uno encima de otro).\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Respuesta estudiante.</b> <a class=\"tocSkip\"></a>\n",
-    "    \n",
-    "Cambie el tipo de grafico de barras a histograma. Filtre los datos por plan de df_user_plan_per_month. \n",
-    "La parte de stacked no la entendi, la grafica pasada estaba apilada, pero la nueva no se si cuente como apilada.  \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer v2</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Muy bien, efectivamente me refería a que la gráfica anterior estaba apilada y eso no permitía diferenciarlos bien, en este caso si es mejor para observar las distribuciones y compararlas\n",
-    "</div>"
    ]
   },
   {
@@ -3697,17 +3564,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Muy bien\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "r627zBO50q1K"
    },
@@ -3723,41 +3579,6 @@
     "- Parece que la tarifa surf tiene mas dispersión de valores, al tener los bigotes mas largos. \n",
     "- No se observan valores atipicos. \n",
     "- Conforme pasan los meses va aumentndo la demanda. Para diciembre la diferencia de demanda es casi del doble, siendo la tarifa surf la que mas consume (por la existencia de mas usuarios de la tarifa surf)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Comentario de Reviewer</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Muy bien con las observaciones, excepto la de la anchura. Nota que es un comentario muy vago y no indica una comparación. La frase \"hay una variabilidad de los conjuntos de datos\" no ayuda mucho, puesto que es normal que los conjuntos de datos tengan variabilidad, por favor, complementa\n",
-    "    \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Respuesta estudiante.</b> <a class=\"tocSkip\"></a>\n",
-    "    \n",
-    "Elimine el comentario\n",
-    "- Por la anchura de los rectangulos (el de la tarifa surf mas garnde que la de ultimate, hay una variabilidad de los conjuntos de datos.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer v2</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Ok, corregido\n",
-    "</div>"
    ]
   },
   {
@@ -3927,17 +3748,6 @@
     "plt.xlabel('Month')\n",
     "plt.ylabel('Frequency')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Muy bien, correcto\n",
-    "</div>"
    ]
   },
   {
@@ -4136,39 +3946,6 @@
     "plt.legend(['surf','ultimate'])\n",
     "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Comentario de Reviewer</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Mismo comentario que en la parte de llamadas\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Respuesta estudiante.</b> <a class=\"tocSkip\"></a>\n",
-    "    \n",
-    "Mismo cambio que en la parte de llamadas.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer v2</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Ok, corregido\n",
-    "</div>"
    ]
   },
   {
@@ -4376,56 +4153,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Muy bien, correcto, aunque la parte de la variabilidad tengo el mismo comentario que la sección anterior.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Respuesta estudiante.</b> <a class=\"tocSkip\"></a>\n",
-    "    \n",
-    "Elimine el comentario\n",
-    "- Por la anchura de los rectangulos (la tarifa surf siendo el rectangulo mas grande) hay una variabilidad de los conjuntos de dato.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "42YSypXz0q1M"
    },
    "source": [
     "### Internet"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Comentario de Reviewer</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Esta parte la corregiré una vez se corrija el cálculo de gb\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Comentario de Reviewer v2</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Falta corregir el cálculo del consumo de internet\n",
-    "</div>"
    ]
   },
   {
@@ -4992,44 +4724,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer v3</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Buen trabajo en esta sección\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "tCijq3260q1N"
    },
    "source": [
     "## Ingreso"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Comentario de Reviewer</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Esta parte la corregiré una vez se corrija el cálculo de gb\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Comentario de Reviewer v2</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Falta corregir el cálculo del consumo de internet\n",
-    "</div>"
    ]
   },
   {
@@ -5122,44 +4821,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer v3</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Bien hecho, está correcto\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "ajJ7VKeI0q1Q"
    },
    "source": [
     "## Prueba las hipótesis estadísticas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Comentario de Reviewer</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Esta parte la corregiré una vez se corrija el cálculo de gb\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Comentario de Reviewer v2</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Falta corregir el cálculo del consumo de internet\n",
-    "</div>"
    ]
   },
   {
@@ -5202,17 +4868,6 @@
    "source": [
     "**Nota**  \n",
     "Se rechaza la hipótesis nula. Hay diferencias significativas en los ingresos promedio. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer v3</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Muy bien, correcto\n",
-    "</div>"
    ]
   },
   {
@@ -5261,17 +4916,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer v3</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Muy bien, correcto\n",
-    "</div>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
@@ -5311,7 +4955,7 @@
     "id": "bbTR8UQO0q1T"
    },
    "source": [
-    "## Conclusión general\n",
+    "## Recopilación de informes\n",
     "\n",
     "**Para la lectura de datos**  \n",
     "- Lectura de datos correctas, no se tuvieron que agregar argumentos adicionales.\n",
@@ -5425,24 +5069,6 @@
     "*Se utilizo una prueba t student para comparar si hay diferencias en la media significativas. No hay evidencia suficiente para rechazar la hipótesis nula. Probablemente hay diferencias del ingreso promedio entre la región NY-NJ y el resto de regiones.*  \n",
     "*Se utilizo una prueba de dos colas para ver si habia cambios en cualquier dirección y el resultado fue el mismo.* "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Comentario de Reviewer v3</b> <a class=\"tocSkip\"></a>\n",
-    "\n",
-    "Bien con las conclusiones de cada sección, pero estimo que es mejor ser más acotado en las conclusiones finales. No es necesario señalar cada resultado obtenido, solo los más importantes de cada sección o grupos de secciones.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
