--- a/notebooks/Statistical_Data_Analysis.ipynb
+++ b/notebooks/Statistical_Data_Analysis.ipynb
@@ -6,7 +6,7 @@
     "id": "3rYiDeEH0q0f"
    },
    "source": [
-    "# ¿Cuál es la mejor tarifa?\n",
+    "# Megaline ¿Cuál es la mejor tarifa?\n",
     "\n",
     "Trabajas como analista para el operador de telecomunicaciones Megaline. La empresa ofrece a sus clientes dos tarifas de prepago, Surf y Ultimate. El departamento comercial quiere saber cuál de las tarifas genera más ingresos para poder ajustar el presupuesto de publicidad.\n",
     "\n",
