Se añade una ToC.

--- a/notebooks/Statistical_Data_Analysis.ipynb
+++ b/notebooks/Statistical_Data_Analysis.ipynb
@@ -2,11 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "3rYiDeEH0q0f"
-   },
+   "metadata": {},
    "source": [
-    "# Megaline ¿Cuál es la mejor tarifa?\n",
+    "# <a id='toc1_'></a>[Megaline ¿Cuál es la mejor tarifa?](#toc0_)\n",
     "\n",
     "Trabajas como analista para el operador de telecomunicaciones Megaline. La empresa ofrece a sus clientes dos tarifas de prepago, Surf y Ultimate. El departamento comercial quiere saber cuál de las tarifas genera más ingresos para poder ajustar el presupuesto de publicidad.\n",
     "\n",
@@ -17,7 +15,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Propósito y acciones del proyecto\n",
+    "**Tabla de Contenido**<a id='toc0_'></a>    \n",
+    "- [Megaline ¿Cuál es la mejor tarifa?](#toc1_)    \n",
+    "  - [Propósito y acciones del proyecto](#toc1_1_)    \n",
+    "  - [Diccionario de datos](#toc1_2_)    \n",
+    "  - [Inicialización de librerías](#toc1_3_)    \n",
+    "  - [Cargar datos](#toc1_4_)    \n",
+    "- [Preparar los datos](#toc2_)    \n",
+    "  - [Tarifas](#toc2_1_)    \n",
+    "    - [Corregir datos](#toc2_1_1_)    \n",
+    "  - [Usuarios/as](#toc2_2_)    \n",
+    "    - [Corregir los datos](#toc2_2_1_)    \n",
+    "    - [Enriquecer los datos](#toc2_2_2_)    \n",
+    "  - [Llamadas](#toc2_3_)    \n",
+    "    - [Corregir los datos](#toc2_3_1_)    \n",
+    "    - [Enriquecer los datos](#toc2_3_2_)    \n",
+    "  - [Mensajes](#toc2_4_)    \n",
+    "    - [Corregir los datos](#toc2_4_1_)    \n",
+    "    - [Enriquecer los datos](#toc2_4_2_)    \n",
+    "  - [Internet](#toc2_5_)    \n",
+    "    - [Corregir los datos](#toc2_5_1_)    \n",
+    "    - [Enriquecer los datos](#toc2_5_2_)    \n",
+    "- [Estudiar las condiciones de las tarifas](#toc3_)    \n",
+    "  - [Estudia el comportamiento de usuario](#toc3_1_)    \n",
+    "    - [Llamadas](#toc3_1_1_)    \n",
+    "    - [Mensajes](#toc3_1_2_)    \n",
+    "    - [Internet](#toc3_1_3_)    \n",
+    "  - [Ingreso](#toc3_2_)    \n",
+    "  - [Prueba las hipótesis estadísticas](#toc3_3_)    \n",
+    "  - [Recopilación de informes](#toc3_4_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a id='toc1_1_'></a>[Propósito y acciones del proyecto](#toc0_)\n",
     "\n",
     "**Lecutra de datos:**  \n",
     "Utilizare los métodos de pandas. Los archivos son csv asi que utilizare la función read_csv(). Examinare los archivos para ver que se hayan leido correctamente, en caso contrario aplicare los argumentos necesarios para una lectura correcta del archivo.\n",
@@ -70,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Diccionario de datos\n",
+    "## <a id='toc1_2_'></a>[Diccionario de datos](#toc0_)\n",
     "1. La tabla `users` (datos sobre los usuarios):\n",
     " \n",
     "- *user_id*: identificador único del usuario.\n",
@@ -116,11 +158,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "MQi4IPy70q0y"
-   },
+   "metadata": {},
    "source": [
-    "## Inicialización de librerías"
+    "## <a id='toc1_3_'></a>[Inicialización de librerías](#toc0_)"
    ]
   },
   {
@@ -140,11 +180,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "4ysWWC5i0q00"
-   },
+   "metadata": {},
    "source": [
-    "## Cargar datos"
+    "## <a id='toc1_4_'></a>[Cargar datos](#toc0_)"
    ]
   },
   {
@@ -176,20 +214,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "69qqoJ3r0q01"
-   },
+   "metadata": {},
    "source": [
-    "# Preparar los datos"
+    "# <a id='toc2_'></a>[Preparar los datos](#toc0_)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ohBhimvH0q01"
-   },
+   "metadata": {},
    "source": [
-    "## Tarifas"
+    "## <a id='toc2_1_'></a>[Tarifas](#toc0_)"
    ]
   },
   {
@@ -328,11 +362,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "R3C05i1l0q03"
-   },
+   "metadata": {},
    "source": [
-    "### Corregir datos"
+    "### <a id='toc2_1_1_'></a>[Corregir datos](#toc0_)"
    ]
   },
   {
@@ -467,11 +499,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "1n2X6WXf0q04"
-   },
+   "metadata": {},
    "source": [
-    "## Usuarios/as"
+    "## <a id='toc2_2_'></a>[Usuarios/as](#toc0_)"
    ]
   },
   {
@@ -650,11 +680,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "BX5FQh_I0q06"
-   },
+   "metadata": {},
    "source": [
-    "### Corregir los datos"
+    "### <a id='toc2_2_1_'></a>[Corregir los datos](#toc0_)"
    ]
   },
   {
@@ -843,11 +871,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ycwuARJp0q07"
-   },
+   "metadata": {},
    "source": [
-    "### Enriquecer los datos"
+    "### <a id='toc2_2_2_'></a>[Enriquecer los datos](#toc0_)"
    ]
   },
   {
@@ -1095,11 +1121,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "o7MeKCid0q08"
-   },
+   "metadata": {},
    "source": [
-    "## Llamadas"
+    "## <a id='toc2_3_'></a>[Llamadas](#toc0_)"
    ]
   },
   {
@@ -1243,11 +1267,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "S7hzxmbX0q0-"
-   },
+   "metadata": {},
    "source": [
-    "### Corregir los datos"
+    "### <a id='toc2_3_1_'></a>[Corregir los datos](#toc0_)"
    ]
   },
   {
@@ -1309,11 +1331,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "KrMgTrlG0q0_"
-   },
+   "metadata": {},
    "source": [
-    "### Enriquecer los datos"
+    "### <a id='toc2_3_2_'></a>[Enriquecer los datos](#toc0_)"
    ]
   },
   {
@@ -1444,11 +1464,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "mOUZSi180q0_"
-   },
+   "metadata": {},
    "source": [
-    "## Mensajes"
+    "## <a id='toc2_4_'></a>[Mensajes](#toc0_)"
    ]
   },
   {
@@ -1584,11 +1602,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Sprfak900q1B"
-   },
+   "metadata": {},
    "source": [
-    "### Corregir los datos"
+    "### <a id='toc2_4_1_'></a>[Corregir los datos](#toc0_)"
    ]
   },
   {
@@ -1647,11 +1663,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "HvLid7iD0q1B"
-   },
+   "metadata": {},
    "source": [
-    "### Enriquecer los datos"
+    "### <a id='toc2_4_2_'></a>[Enriquecer los datos](#toc0_)"
    ]
   },
   {
@@ -1760,11 +1774,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "bStkaxn40q1C"
-   },
+   "metadata": {},
    "source": [
-    "## Internet"
+    "## <a id='toc2_5_'></a>[Internet](#toc0_)"
    ]
   },
   {
@@ -1907,11 +1919,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "yA0tkPFg0q1D"
-   },
+   "metadata": {},
    "source": [
-    "### Corregir los datos"
+    "### <a id='toc2_5_1_'></a>[Corregir los datos](#toc0_)"
    ]
   },
   {
@@ -1970,11 +1980,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "e8_mLF4a0q1E"
-   },
+   "metadata": {},
    "source": [
-    "### Enriquecer los datos"
+    "### <a id='toc2_5_2_'></a>[Enriquecer los datos](#toc0_)"
    ]
   },
   {
@@ -2090,11 +2098,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "3UA2cqIW0q1E"
-   },
+   "metadata": {},
    "source": [
-    "# Estudiar las condiciones de las tarifas"
+    "# <a id='toc3_'></a>[Estudiar las condiciones de las tarifas](#toc0_)"
    ]
   },
   {
@@ -3194,20 +3200,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-jtyHzJb0q1I"
-   },
+   "metadata": {},
    "source": [
-    "## Estudia el comportamiento de usuario"
+    "## <a id='toc3_1_'></a>[Estudia el comportamiento de usuario](#toc0_)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "vtW4CJEe0q1J"
-   },
+   "metadata": {},
    "source": [
-    "### Llamadas"
+    "### <a id='toc3_1_1_'></a>[Llamadas](#toc0_)"
    ]
   },
   {
@@ -3583,11 +3585,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "8idKy8Wh0q1L"
-   },
+   "metadata": {},
    "source": [
-    "### Mensajes"
+    "### <a id='toc3_1_2_'></a>[Mensajes](#toc0_)"
    ]
   },
   {
@@ -4153,11 +4153,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "42YSypXz0q1M"
-   },
+   "metadata": {},
    "source": [
-    "### Internet"
+    "### <a id='toc3_1_3_'></a>[Internet](#toc0_)"
    ]
   },
   {
@@ -4724,11 +4722,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "tCijq3260q1N"
-   },
+   "metadata": {},
    "source": [
-    "## Ingreso"
+    "## <a id='toc3_2_'></a>[Ingreso](#toc0_)"
    ]
   },
   {
@@ -4821,11 +4817,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "ajJ7VKeI0q1Q"
-   },
+   "metadata": {},
    "source": [
-    "## Prueba las hipótesis estadísticas"
+    "## <a id='toc3_3_'></a>[Prueba las hipótesis estadísticas](#toc0_)"
    ]
   },
   {
@@ -4951,11 +4945,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "bbTR8UQO0q1T"
-   },
+   "metadata": {},
    "source": [
-    "## Recopilación de informes\n",
+    "## <a id='toc3_4_'></a>[Recopilación de informes](#toc0_)\n",
     "\n",
     "**Para la lectura de datos**  \n",
     "- Lectura de datos correctas, no se tuvieron que agregar argumentos adicionales.\n",
